# favro-cli

./: .gitignore  README.md  favro-api-documentation.html  pyproject.toml
.github/workflows/: publish.yml
src/favro_cli/: __init__.py  __main__.py  cli.py  config.py  state.py
src/favro_cli/api/: client.py  models.py
src/favro_cli/commands/: auth.py  board.py  card.py  column.py  common.py  org.py
src/favro_cli/output/: formatters.py
src/favro_cli/resolvers/: base.py  board.py  card.py  column.py  organization.py  tag.py  user.py
